--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   path_provider_android: 2.0.25
   path_provider_foundation: 2.2.2
   path_provider_platform_interface: 2.0.6
+  percent_indicator: 4.2.2
   plugin_platform_interface: 2.1.6
   provider: 6.0.5
   rxdart: 0.27.7
@@ -81,6 +82,7 @@ dependencies:
   sign_in_with_apple: 4.3.0
   sign_in_with_apple_platform_interface: 1.0.0
   sign_in_with_apple_web: 1.0.1
+  simple_gradient_text: 1.2.3
   smooth_page_indicator: 1.1.0
   sqflite: 2.2.6
   stream_transform: 2.1.0
@@ -94,6 +96,14 @@ dependencies:
   video_player_avfoundation: 2.5.1
   video_player_platform_interface: 6.2.1
   video_player_web: 2.1.2
+  webview_flutter: 4.0.5
+  webview_flutter_android: 3.3.1
+  webview_flutter_platform_interface: 2.0.2
+  webview_flutter_wkwebview: 3.1.1
+  youtube_player_iframe: 
+    git:
+      url: https://github.com/FlutterFlow/youtube_player_flutter.git
+      path: packages/youtube_player_iframe
 
 
   # The following adds the Cupertino Icons font to your application.
