Updating to latest FlutterFlow output.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage_web: 3.6.17
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
+  flutter_native_splash: 2.3.1
   flutter_plugin_android_lifecycle: 2.0.17
   flutter_rating_bar: 4.0.1
   font_awesome_flutter: 10.6.0
@@ -66,6 +67,7 @@ dependencies:
   image_picker_platform_interface: 2.9.1
   intl: 0.18.1
   json_path: 0.6.2
+  lottie: 2.7.0
   mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.0.14
@@ -89,6 +91,7 @@ dependencies:
   sqflite: 2.2.6
   stream_transform: 2.1.0
   timeago: 3.2.2
+  universal_io: 2.2.2
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
@@ -103,6 +106,7 @@ dependencies:
   webview_flutter_platform_interface: 2.0.2
   webview_flutter_wkwebview: 3.1.1
   webviewx_plus: 0.3.3
+  xml: 6.3.0
   youtube_player_iframe: 
     git:
       url: https://github.com/FlutterFlow/youtube_player_flutter.git
@@ -114,11 +118,23 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 3.0.0
+  image: 4.0.17
   lints: 3.0.0
 
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
